# pySUMMA

./: .gitignore  :  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: unittests.yml
examples/: binarySimulationExample.py  rankSimulationExample.py  rankSimulationExample.py~
pySUMMA/: __init__.py  __init__.py~  __version__~  plot.py  sml.py  summa.py  woc.py
pySUMMA/decomposition/: __init__.py  rank_one_matrix.py  rank_one_matrix.py~  rank_one_tensor.py  rank_one_tensor.py~
pySUMMA/simulate/: __init__.py  _gaussian_scores.py  binary.py  rank.py  rank.py~
pySUMMA/utilities/: __init__.py  ba.py  check_data.py  moments.py  rank_transform.py  roc.py
