[metadata]
name = pySUMMA
version = 0.3.3a
description = pySUMMA: methods for aggregating predictions by binary classification.
long_description = file: README.md
license = Apache License 2.0
author = Robert Vogel and Mehmet Eren Ahsen


[options]
packages = 
    pySUMMA
install_requires = 
    python >= 3.5
    numpy >= 1.14.0
    scipy >= 1.0.0
    matplotlib >= 2.2.0
