[metadata]
name = pySUMMA
version = 0.3.3a
description = pySUMMA: methods for aggregating predictions by binary classification.
long_description = file: README.md
license = Apache License 2.0
author = Robert Vogel and Mehmet Eren Ahsen


[options]
packages = 
    pySUMMA
python_requires = >= 3.5
install_requires = 
    numpy >= 1.14.0
    scipy >= 1.0.0
    matplotlib >= 2.2.0
